Bug 493171 - Overview still shows highlight for panel on autohide, and can leave panel stuck open
Summary: Overview still shows highlight for panel on autohide, and can leave panel stu...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-15 20:23 UTC by cwo
Modified: 2024-09-19 16:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
demo (3.15 MB, video/mp4)
2024-09-16 10:31 UTC, Filip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cwo 2024-09-15 20:23:58 UTC
SUMMARY

Panels are hidden in overview mode. If a panel is set to autohide, however, the highlight that happens when the cursor is at the screen edge still happens once each time the overview is opened. As the panel wouldn't show anyway, it probably shouldn't highlight, as that's just visual noise.

However, the panel invisibly does get shown, and at least sometimes (I didn't notice it every time, but I might have missed it or it might be an interaction with the hotcorner I used to enter overview mode) can get temporarily stuck in an open state.

STEPS TO REPRODUCE
1. Have a panel set to autohide at a screen edge (for best effect, place the panel not adjacent to any overview mode hotcorner)
2. Open overview with a hotcorner or Meta+W
3. Push the mouse against the screen edge with the panel
4. Move the mouse far away from the panel and exit overview with Esc (or a distant hotcorner)

OBSERVED RESULT

After 3: Screen edge glows briefly, but nothing else happens
After 4: Autohide panel is visible and stays visible until you mouseover

EXPECTED RESULT

After 3: No screen glow
After 4: Ideally no panel visible, but at least it should still autohide on its own.

SOFTWARE/OS VERSIONS

kde-built git master

Operating System: TUXEDO OS 3
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.8.0-101041-tuxedo (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520
Comment 1 Filip 2024-09-16 10:31:07 UTC
Created attachment 173721 [details]
demo

Can confirm. Also uploaded a video to showcase.
Comment 2 Nate Graham 2024-09-16 17:00:24 UTC
Can also confirm.
Comment 3 Bug Janitor Service 2024-09-17 11:40:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6397
Comment 4 Vlad Zahorodnii 2024-09-19 15:26:36 UTC
Git commit d1cdadd02bdef435da6d4c392747964daab43e7b by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 19/09/2024 at 15:01.
Pushed by vladz into branch 'master'.

screenedge: don't activate screen edges for panels while a fullscreen effect is active

M  +6    -0    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/d1cdadd02bdef435da6d4c392747964daab43e7b
Comment 5 Zamundaaa 2024-09-19 16:35:48 UTC
Git commit 306f750197692489503520d6c1e39d1cfd3ffb8a by Xaver Hugl.
Committed on 19/09/2024 at 16:21.
Pushed by zamundaaa into branch 'Plasma/6.2'.

screenedge: don't activate screen edges for panels while a fullscreen effect is active


(cherry picked from commit d1cdadd02bdef435da6d4c392747964daab43e7b)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +6    -0    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/306f750197692489503520d6c1e39d1cfd3ffb8a