screenedge: don't activate screen edges for panels while a fullscreen effect is active

BUG: 493171